Fix header on mobile

--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -79,7 +79,3 @@ h3 {
 .b-tooltip { 
 	pointer-events: none;
 }
-
-.gap-2 {
-	gap: 8px;
-}
